--- a/css/styles.css
+++ b/css/styles.css
@@ -142,50 +142,47 @@ button.cta-btn{
 /* CTA button end */
 
 /* Carousel style ******************************************************/
-#carousel{
-    .carousel-item .row .col{
-        padding: 0;
-    }
-
-    .carousel-img{
-        position: relative;
-    }
-
-    .img-text{
-        position: absolute;
-        bottom: 0px;
-        background-color: black;
-        color: white;
-        width: 53%;
-        text-align: center;
-        padding-top: 3px;
-        padding-bottom: 3px;
-        opacity: .65;
-    }
-    .carousel-btn{
-        height: 85%;
-        top: 45px;
-        bottom: 45px;
-        width: 10%;
-    }
-
-    .carousel-btn span{
-        height: 5vh;
-        width: 50px;
-        /* background-color: black; */
-        /* opacity: 0.5; */
-    }
-
-    .img-text p{
-        display: none;
-    }
-
-    .carousel-item .col:hover{
-        .img-text p{
-            display: block;
-        }
-    }
+#carousel .carousel-item .row .col{
+    padding: 0;
 }
+
+#carousel .carousel-img{
+    position: relative;
+}
+
+#carousel .img-text{
+    position: absolute;
+    bottom: 0px;
+    background-color: black;
+    color: white;
+    width: 53%;
+    text-align: center;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    opacity: .65;
+}
+#carousel .carousel-btn{
+    height: 85%;
+    top: 45px;
+    bottom: 45px;
+    width: 10%;
+}
+
+#carousel .carousel-btn span{
+    height: 5vh;
+    width: 50px;
+    /* background-color: black; */
+    /* opacity: 0.5; */
+}
+
+#carousel .img-text p{
+    display: none;
+}
+
+#carousel .carousel-item .col:hover .img-text p{
+    display: block;
+}
+
 /* Carousel end */
 
 /* Story styles **********************************************************/
@@ -223,152 +220,144 @@ button.cta-btn{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-
-    .card {
-        --border-radius: 0.75rem;
-        width: 30%;
-        font-family: "Arial";
-        /* height: 30vh; */
-        padding: 1rem;
-        cursor: pointer;
-        border-radius: 0px;
-        border-top-left-radius: var(--border-radius);
-        border-bottom-right-radius: var(--border-radius);
-        background: #f1f1f3;
-        box-shadow: 0px 8px 16px 0px rgb(0 0 0 / 3%);
-        position: relative;
-        margin-right: 5px;
-        margin-bottom: 10px;
-    }
-    
-    .card > * + * {
-        margin-top: 1.1em;
-    }
-    
-    .card .card__content {
-        color: var(--secondary-color);
-        font-size: 0.86rem;
-    }
-    
-    .card .card__title {
-        padding: 0;
-        font-size: 1.3rem;
-        font-weight: bold;
-    }
-
-    .card .card__arrow {
-        position: absolute;
-        background: var(--primary-color);
-        /* padding: 0.4rem; */
-        padding-left: 8px;
-        border-top-left-radius: var(--border-radius);
-        border-bottom-right-radius: var(--border-radius);
-        bottom: 0;
-        right: 0;
-        transition: 0.2s;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .card i {
-        transition: 0.2s;
-        color: white;
-        /* height: 1.5rem; */
-        font-size: 1.1rem;
-    }
-
-    /* hover */
-    .card:hover .card__title {
-        color: var(--primary-color);
-        text-decoration: underline;
-    }
-
-    .card:hover .card__arrow {
-        background: #111;
-    }
-
-    .card:hover .card__arrow i {
-        transform: translateX(3px);
-    }
 }
+
+#services .card {
+    --border-radius: 0.75rem;
+    width: 30%;
+    font-family: "Arial";
+    /* height: 30vh; */
+    padding: 1rem;
+    cursor: pointer;
+    border-radius: 0px;
+    border-top-left-radius: var(--border-radius);
+    border-bottom-right-radius: var(--border-radius);
+    background: #f1f1f3;
+    box-shadow: 0px 8px 16px 0px rgb(0 0 0 / 3%);
+    position: relative;
+    margin-right: 5px;
+    margin-bottom: 10px;
+}
+
+#services .card > * + * {
+    margin-top: 1.1em;
+}
+
+#services .card .card__content {
+    color: var(--secondary-color);
+    font-size: 0.86rem;
+}
+
+#services .card .card__title {
+    padding: 0;
+    font-size: 1.3rem;
+    font-weight: bold;
+}
+
+#services .card .card__arrow {
+    position: absolute;
+    background: var(--primary-color);
+    /* padding: 0.4rem; */
+    padding-left: 8px;
+    border-top-left-radius: var(--border-radius);
+    border-bottom-right-radius: var(--border-radius);
+    bottom: 0;
+    right: 0;
+    transition: 0.2s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#services .card i {
+    transition: 0.2s;
+    color: white;
+    /* height: 1.5rem; */
+    font-size: 1.1rem;
+}
+
+/* hover */
+#services .card:hover .card__title {
+    color: var(--primary-color);
+    text-decoration: underline;
+}
+
+#services .card:hover .card__arrow {
+    background: #111;
+}
+
+#services .card:hover .card__arrow i {
+    transform: translateX(3px);
+}
+
 /* Service End */
 
 /* Case study ****************************************************/
-.data-block{
+#case-study .carousel-item{
+    padding-left: 2px;
+    padding-right: 2px;
+}
+
+#case-study .card {
+    /* max-width: 300px; */
+    border-radius: 0.5rem;
+    background-color: #fff;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+    border: 1px solid transparent;
     height: 50vh;
+}
+    
+#case-study .content {
+    padding: 1.1rem;
+}
+    
+#case-study .image {
+    object-fit: cover;
     width: 100%;
-    background-color: antiquewhite;
-    border: 1px solid black;
+    height: 150px;
+    background-color: rgb(239, 205, 255);
+}
+    
+#case-study .title {
+    color: #111827;
+    font-size: 1.125rem;
+    /* line-height: 1.75rem; */
+    font-weight: 600;
+}
+    
+#case-study .desc {
+    margin-top: 0.3rem;
+    color: #6B7280;
+    font-size: 0.875rem;
+    /* line-height: 1.25rem; */
+}
+    
+#case-study .action {
+    display: inline-flex;
+    margin-top: 1rem;
+    color: #ffffff;
+    font-size: 0.875rem;
+    /* line-height: 1.25rem; */
+    font-weight: 500;
+    align-items: center;
+    gap: 0.25rem;
+    background-color: #2563EB;
+    padding: 5px 8px;
+    border-radius: 4px;
+}
+    
+#case-study .action span {
+    transition: .3s ease;
+}
+    
+#case-study .action:hover span {
+    transform: translateX(4px);
 }
 
-#case-study{
-    .carousel-item{
-        padding-left: 2px;
-        padding-right: 2px;
-    }
-
-    .card {
-        /* max-width: 300px; */
-        border-radius: 0.5rem;
-        background-color: #fff;
-        box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-        border: 1px solid transparent;
-        height: 50vh;
-    }
-      
-    .content {
-        padding: 1.1rem;
-    }
-      
-    .image {
-        object-fit: cover;
-        width: 100%;
-        height: 150px;
-        background-color: rgb(239, 205, 255);
-    }
-      
-    .title {
-        color: #111827;
-        font-size: 1.125rem;
-        /* line-height: 1.75rem; */
-        font-weight: 600;
-    }
-      
-    .desc {
-        margin-top: 0.3rem;
-        color: #6B7280;
-        font-size: 0.875rem;
-        /* line-height: 1.25rem; */
-    }
-      
-    .action {
-        display: inline-flex;
-        margin-top: 1rem;
-        color: #ffffff;
-        font-size: 0.875rem;
-        /* line-height: 1.25rem; */
-        font-weight: 500;
-        align-items: center;
-        gap: 0.25rem;
-        background-color: #2563EB;
-        padding: 5px 8px;
-        border-radius: 4px;
-    }
-      
-    .action span {
-        transition: .3s ease;
-    }
-      
-    .action:hover span {
-        transform: translateX(4px);
-    }
-
-    .carousel-control-prev, .carousel-control-next{
-        height: 40vh;
-        top: 45px;
-    }  
-}
+#case-study .carousel-control-prev, .carousel-control-next{
+    height: 40vh;
+    top: 45px;
+}  
 /* Case study End */
 
 /* Members Style **********************************************************/
@@ -459,6 +448,7 @@ button.cta-btn{
 
 #mail-id, #mail-sub, #mail-desc{
     border: 0;
+    border-radius: 10px;
     outline: none;
     margin: 10px 0px;
     padding: 10px 20px;
@@ -551,16 +541,14 @@ button.cta-btn{
 }
 
 @media screen and (min-width: 576px) {
-    #case-study{
-        .carousel-inner{
-            display: flex;
-        }
+    #case-study .carousel-inner{
+        display: flex;
+    }
 
-        .carousel-item{
-            display: block;
-            margin-right: 0px;
-            flex: 0 0 calc(100%/3);
-        }
+    #case-study .carousel-item{
+        display: block;
+        margin-right: 0px;
+        flex: 0 0 calc(100%/3);
     }
 }
 
@@ -577,9 +565,9 @@ button.cta-btn{
         justify-content: space-evenly;
         align-items: center;
 
-        .card{
-            width: 90%;
-        }
+    }
+    #services .card{
+        width: 90%;
     }
 
     .team-member{
